Added: Trustpilot block at Admin Order show page (fixed #1)

--- a/src/Resources/translations/messages.en.yml
+++ b/src/Resources/translations/messages.en.yml
@@ -8,3 +8,12 @@ setono_sylius_trustpilot:
                     label: Enable
                 trustpilot_disable:
                     label: Disable
+        segment:
+            header: Trustpilot
+            order:
+                header: Order
+                emails_sent: Trustpilot emails sent
+            customer:
+                header: Customer
+                limit_reached: Limit reached
+                trustpilot_enabled: Trustpilot enabled
