--- a/src/Resources/translations/messages.da.yml
+++ b/src/Resources/translations/messages.da.yml
@@ -1,19 +1,19 @@
 setono_sylius_trustpilot:
     ui:
-        trustpilot_emails_sent: Trustpilot emails sent
-        trustpilot_enabled: Trustpilot enabled
+        trustpilot_emails_sent: Trustpilot emails er sendt
+        trustpilot_enabled: Trustpilot aktiveret
         order:
             button:
                 trustpilot_enable:
-                    label: Enable
+                    label: Aktiver
                 trustpilot_disable:
-                    label: Disable
+                    label: Deaktiver
         segment:
             header: Trustpilot
             order:
-                header: Order
-                emails_sent: Trustpilot emails sent
+                header: Ordre
+                emails_sent: Trustpilot emails er sendt
             customer:
-                header: Customer
-                limit_reached: Limit reached
-                trustpilot_enabled: Trustpilot enabled
+                header: Kunde
+                limit_reached: Grænse nået
+                trustpilot_enabled: Trustpilot aktiveret
